[metadata]
name = ml_project
version = 0.0.1
author = ThomasTorkildsen
description = ML project using MLflow and ArgoCD
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ThomasTorkildsen/argocd-mlflow-project
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    altair==4.2.2
    pandas==2.1.4
    python-dotenv==1.0.1
    streamlit==1.32.1
python_requires = >=3.10
